# tooling

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  .pre-commit-config.yaml  README.md  aca.py  common_utils.py  encrypted_executable_get-biscuit.py.age  find-related-commits.py  gdoc-comments.py  git-switch-main.py  git-undo.sh  gitlab-lean.py  gitlab-mr-comments.py  lx.py  pyproject.toml  update-claude-md.py  validate-python-version.py  weekly_status.py
docs/: commands-reference.md  common-utils.md  package-internals.md  scripts-reference.md
src/devtool/: cli.py
src/devtool/ask/: command.py
src/devtool/commit/: command.py
src/devtool/common/: claude.py  config.py  console.py  errors.py  git.py
src/devtool/doctor/: command.py
src/devtool/gdoc/: __init__.py  comments.py  resolve.py  upload.py
src/devtool/gitlab/: __init__.py  merge.py  protect.py
src/devtool/jira/: backfill.py  client.py  command.py  create.py  remote_links.py  status.py
src/devtool/mr_create/: command.py
src/devtool/mr_desc/: command.py
src/devtool/weekly_status/: command.py
